--- a/src/it/polito/tdp/corsi/GestoreCorsi.fxml
+++ b/src/it/polito/tdp/corsi/GestoreCorsi.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="it.polito.tdp.corsi.GestoreCorsiController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.corsi.GestoreCorsiController">
    <center>
       <TextArea fx:id="txtResult" BorderPane.alignment="CENTER" />
    </center>
@@ -40,7 +39,29 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <HBox />
+            <HBox>
+               <children>
+                  <Label prefHeight="21.0" prefWidth="48.0" text="Corso">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="txtCorso">
+                     <HBox.margin>
+                        <Insets left="14.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button fx:id="btnStudentiCorso" mnemonicParsing="false" onAction="#doElencaStudenti" prefHeight="31.0" prefWidth="122.0" text="Elenca Studenti">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnCDS" mnemonicParsing="false" onAction="#doCalcolaStatCDS" text="Statistiche CDS">
+                     <HBox.margin>
+                        <Insets left="8.0" />
+                     </HBox.margin>
+                  </Button>
+               </children></HBox>
          </children>
       </VBox>
    </top>
